# silo

./: .cache_ggshield  .dockerignore  .editorconfig  .env.production.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_ISSUES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  biome.json  docker-compose.dragonfly.yml  docker-compose.prod.yml  drizzle.config.ts  package-lock.json  package.json  slack-manifest.yml  tailwind.config.js  tsconfig.frontend.json  tsconfig.server.json  vite.config.ts
dataplane/: Cargo.toml  Dockerfile  README.md
dataplane/src/: accounting.rs  auth.rs  aws_chunked.rs  bucket.rs  cache.rs  copy.rs  delete.rs  disk_cache.rs  internal_storage.rs  list.rs  main.rs  multipart.rs  quota.rs  rate_limit.rs  regions.rs  replication.rs  response.rs  security.rs  stats.rs  upstream.rs  usage.rs  writer.rs
deploy/: FAILOVER_DRILLS.md  MULTI_REGION.md  RECOVERY.md  SETUP.md  eu-central.env.example  otel-collector.yaml  us-east.env.example
drizzle/: 0000_initial_schema.sql  0000_uneven_shriek.sql  0001_spooky_sway.sql  0001_tan_salo.sql  0002_aspiring_purple_man.sql  0002_audit_redemptions.sql  0003_colorful_tattoo.sql  0003_low_colleen_wing.sql  0004_abnormal_gamma_corps.sql  0004_failover_fencing.sql  0005_majestic_synch.sql  0005_multi_region_control_plane.sql  0006_database_ha.sql  0006_spooky_thor_girl.sql  0007_admin_audit_logs.sql  0007_cooing_ink.sql  0008_spooky_steel_serpent.sql  0009_loud_ego.sql  0010_key_notes.sql  0011_bucket_collaboration.sql  (+9 more)
(+374 files in other folders)
