[package]
name = "silo-dataplane"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
md-5 = "0.10"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
